# gw-synth-flash-mcp

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  README_JA.md
examples/: claude-code.mcp.json  start-stdio.sh  vscode.mcp.json
src/: main.rs
tests/: mcp_hardware.rs  mcp_smoke.rs
