[package]
name = "gw-synth-flash-mcp"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "An unofficial MCP server that exposes a few Gowin IDE CLI workflows as tools."

[dependencies]
anyhow = "1.0.86"
rmcp = { version = "0.14.0", features = [
    "macros",
    "server",
    "client",
    "schemars",
    "transport-io",
    "transport-child-process",
] }
schemars = "1.0.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.39.3", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "process",
    "io-util",
    "fs",
] }

[dev-dependencies]
# 追加のdev依存は増やさず、rmcp自身でスモークテストする

[[bin]]
name = "gw-synth-flash-mcp"
path = "src/main.rs"
